fix: overflow shown on mobile

--- a/client/src/styles/projects.css
+++ b/client/src/styles/projects.css
@@ -62,7 +62,7 @@
   background-color: #d0b2da;
   padding-bottom: 100px;
   position: block;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   display: flex;
   flex-direction: column;
 }
@@ -71,7 +71,7 @@
   background-color: #ffcfa873;
   padding-bottom: 100px;
   position: block;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   display: flex;
   flex-direction: column;
 }
@@ -80,7 +80,7 @@
   background-color: #9da4ff73;
   padding-bottom: 100px;
   position: block;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   display: flex;
   flex-direction: column;
 }
